# MockingBirdForUse

./: README.md  pyproject.toml
.github/workflows/: codecov.yml
mockingbirdforuse/: __init__.py  log.py
mockingbirdforuse/encoder/: audio.py  inference.py  model.py
mockingbirdforuse/synthesizer/: hparams.py  inference.py
mockingbirdforuse/synthesizer/models/: global_style_token.py  tacotron.py
mockingbirdforuse/vocoder/hifigan/: hparams.py  inference.py  models.py
mockingbirdforuse/vocoder/wavernn/: audio.py  hparams.py  inference.py
mockingbirdforuse/vocoder/wavernn/models/: deepmind_version.py  fatchord_version.py
tests/: test_synthesize.py
